--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1 onclick='prompt("Hello World")'>Hello World</h1>
+<header>
+  Bootleg Cookie Clicker
+</header>
+<nav class='counter'>
+  cookies
+</nav>
+<section>
+  Cookie
+</section>
+<article>
+  Milk
+</article>
+<aside>
+  Upgrades
+</aside>
+<footer>
+  Footer
+</footer>
