--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
   <style src='style.css'></style>
   Bootleg Cookie Clicker
 </header>
-<nav class='counter'>
-  cookies
-</nav>
-<section>
-  Cookie
-</section>
-<article>
-  Milk
-</article>
-<aside>
-  Upgrades
-</aside>
+<body>
+  <nav class='counter'>
+    cookies
+  </nav>
+  <section>
+    Cookie
+  </section>
+  <article>
+    Milk
+  </article>
+  <aside>
+    Upgrades
+  </aside>
+</body>
 <footer>
   Footer
 </footer>
