--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <header>
-  <style src='style.css'></style>
+  <style>
+    aside {
+      align: right;
+    }
+  </style>
   Bootleg Cookie Clicker
 </header>
 <body>
