--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE HTML>
 <meta charset='utf-8'>
-<header>
+  <script>
+    //var cookies = 0
+    //const cookieCounter = document.createElement("counter")
+    //function addCookies() {
+    //  cookies++
+    //}
+  </script>
   <style>
     aside {
       align-self: right;
     }
+    
   </style>
-  Bootleg Cookie Clicker
-</header>
 <body>
   <nav class='counter'>
     cookies
